# AgentTeam

./: .gitignore  README.md  pyproject.toml
Dataset/: Readme.md
Documentation/: Readme.md  agentteam_progress_log.md
configs/: __init_.py  config.yaml
configs/agents/: __init__.py
configs/agents/orchestrator/: default.yaml
configs/agents/retrieval/: __init__.py  default.yaml
configs/agents/validation/: default.yaml
src/agentteam/: main.py
src/agentteam/agents/: __init__.py  orchestrator_agent.py  retrieval_agent.py  validation_agent.py
src/agentteam/graph/: __init__.py  state.py  workflow.py
src/agentteam/models/: structured_outputs.py
src/agentteam/tools/: __init__.py  workspace_logger.py
src/agentteam/tools/retrieval_agent/: retrieval_tools.py
src/agentteam/tools/validation_agent/: validator_tools.py
workspace/input/: sample.csv
workspace/logs/: validation_report.json
workspace/output/: sample.csv
workspace/output/bronze/: sample.csv  sample2.csv  sample3.csv
