[project]
name = "agentteam"
version = "0.1.0"
description = "Self-healing multi-agent data ingestion pipelines using LLMs"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "anthropic>=0.58.2",
    "langchain>=0.3.26",
    "langchain-anthropic>=0.3.17",
    "langgraph>=0.5.4",
    "pandas>=2.3.1",
    "numpy>=2.3.1",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.41",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "great-expectations>=1.5.11",
    "loguru>=0.7.3",
    "langgraph-supervisor>=0.0.31",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.2",
    "mypy>=1.16.1",
    "ipykernel>=6.29.5",
]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
